syntax = "proto3";

package user;

service UserService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc FollowUser (FollowRequest) returns (FollowResponse);
  rpc UnfollowUser (FollowRequest) returns (UnFollowResponse);
  rpc GetFollowers (GetFollowersRequest) returns (GetFollowersResponse);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string userId = 2;
}

message FollowRequest {
  string userId = 1;
  string followUserId = 2;
}

message GetFollowersRequest {
  string userId = 1;
  int32 page_size = 2;   
  int32 page_number = 3; 
}

message FollowResponse {
  string message = 1;
}

message UnfollowResponse {
  string message = 1;
}

message Follower {
  string id = 1;
  string followerId = 2;
  string followingId = 3;
  string createdAt = 4;
}

message GetFollowersResponse {
  repeated Follower followers = 1;
  int 32 total_count = 2
}